# Mailing-service

./: .env.sample  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mailings/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py
mailings/management/utils/: utils.py
mailings/migrations/: 0001_initial.py  0002_initial.py
mailings/services/: cache_service.py  mailing_service.py  mixins.py  registration_service.py  statistic_service.py  utils.py
mailings/templates/mailings/: base.html  index.html  mailing_attempts.html  user_attempts.html
mailings/templates/mailings/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  client_upload.html
mailings/templates/mailings/includes/: inc_navbar.html
mailings/templates/mailings/mailing/: mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_schedule.html
mailings/templates/mailings/message/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailings/views/: clients.py  mailings.py  messages.py  statistics.py
users/: forms.py  views.py
users/management/commands/: create_admin.py  create_managers.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_reset.html  password_reset_confirm.html  register.html  user_detail.html  user_form.html  user_list.html
